# massagerobot

./: README.md
control_plugin/: CMakeLists.txt  README.md
control_plugin/include/: base_controller.hpp  config.hpp  control_main_framework.hpp  joint_controller.hpp  pid_controller.hpp  pid_userinterface.hpp
control_plugin/msgs/: CMakeLists.txt  PidInterface.proto
control_plugin/resources/models/fr5_robotic_arm/: model.config  model_custom.sdf
control_plugin/resources/models/fr5_robotic_arm/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
control_plugin/resources/worlds/: massage_robot.sdf
control_plugin/scripts/: gazebo_server.config  startsim.bash
control_plugin/src/: base_controller.cpp  control_main_framework.cpp  joint_controller.cpp  pid_controller.cpp  pid_userinterface.cpp
